css/styles.css
/* Heading CSS */
/* text CSS used for headings found here: https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Text and here https://developer.mozilla.org/en-US/docs/Web/CSS/word-spacing */
/* added line to commit since program glitched? */
h1 {
  font-size: 35px;
  font-family:serif;
  font-style: normal;
  word-spacing: .3rem;
  text-align: center;
}

h2 {
  font-size:30px ;
  font-family:serif ;
  font-style:normal;
  word-spacing: .3rem;
}

h3 {
  font-size:25px ;
  font-family:serif ;
  font-style:normal ;
  word-spacing: .3rem;
}

p, strong, em {
  font-size:16px ;
  font-family:arial ;
}

/*some basic css setting about body and .container*/
* {
  box-sizing: border-box;
}

body {
  width: auto;
  height: auto;
  margin:0px;
  padding:0px;
  font-family: sans-serif;
  background-color: #eee;
  transition: 0.5s;
}

body.night{
  background: #000000;
}

.container {
  position: absolute;
  top:0;
  left:0;
  width: 100%;
  height: 100%;
}

/*common top navigation bar styles for all sizes of screens*/
.topbar_nav {
  width: 100%;
  height: auto;
  background: #98161a;
  position: fixed;
  z-index: 2;
}

.topbar_nav.toggle {
  width:100%;
  height:auto;
  padding: 10px 20px;
  background: #241644;
  text-align: right;
  box-sizing: border-box;
  color: #fff;
  font-size: 30px;
}

/*large screens*/
@media (min-width:768px){
  .topbar_nav{
    display:flex;
    flex-direction: row;
    justify-content: center;
  }

  .topbar_nav ul {
    width: 80%;
    margin: 0 auto;
    padding: 0;
    display: flex;
    flex-direction: row;
    text-align: center;
    justify-content: center;
  }

  .topbar_nav ul li {
    list-style: none;
    display: flex;
    padding: 18px;
  }

  .topbar_nav ul li:hover {
    background: #163669;
  }

  .topbar_nav ul li a {
    color: #fff;
    text-decoration: none;
  }
}

/*small screens*/
@media (max-width:768px)
{
  .topbar_nav{
    display: none;
  }
  .topbar_nav .toggle
  {
    display: block;
  }
  .topbar_nav ul
  {
    width: 100%;
    display: none;
  }
  .topbar_nav ul li
  {
    display: block;
    text-align: center;
  }
  .topbar_nav .active
  {
    display:block;
  }
}

/*side nav bar styles*/
-nav * {
-  padding: 0;
-  margin: 0;
-  text-decoration: none;
-  list-style: none;
-  display:none;
-}

.sidebar_nav {
  height: auto;
  width: 20%;
  position: fixed;
  top: 10%;
}

.sidebar_nav h1 {
  border-bottom: 1px dotted white;
  color: white;
  background-image: linear-gradient(#00264D, black );
  text-align: center;
  margin: 0;
}

.sidebar_nav ul{
  padding: 0;
  margin: 0;
}
.sidebar_nav li {
  background-color: #98161A;
}

.sidebar_nav a {
  display: block;
  color: white;
  padding: 1% 5% 1% 5%;
  border-bottom: 1px dotted white;
  text-decoration: none;
  font-size: 1.25vw;
  text-align: center;
}

.sidebar_nav a:hover {
  background-image: linear-gradient(#DC494F, #B23C40);
}

.dropdown_mainSection ul, .dropdown_page ul, .dropdown_subSection ul, .dropdown_subPage ul{
  display: none;
}

.dropdown_mainSection li:hover > ul, .dropdown_page li:hover > ul, .dropdown_subSection li:hover > ul, .dropdown_subPage li:hover >  ul{
  display: block;
}

.dropdown_mainSection a {
  background-image: linear-gradient(#98161A, darkred);
}

.dropdown_page a {
  background-image: linear-gradient(#3F50DA , #00264D);
}

.dropdown_subSection a {
  background-image: linear-gradient( #313FAB, #062B21);
}

.dropdown_subPage a {
  background-image: linear-gradient(#232C77, #0C3D92);
}

@media(max-width:768px){
  .sidebar_nav{
    display:none;
  }
}

/*navigation bar for small screen*/
#mobile_nav_bar{
  position:fixed;
  top:0px;
  width:200px;
  height:100%;
  background:#151719;
  left:-200px;
  z-index: 1500;
}

#mobile_nav_bar.active{
  left:0px;
}

#mobile_nav_bar ul{
  padding-left: 0px;
}

#mobile_nav_bar ul li{
  color:rgba(230,230,230,0.9);
  list-style: none;
  padding:15px 10px;
  border-bottom: 1px solid rgba(100,100,100,0.3);
}

#mobile_nav_bar .toggle_btn{
  position:absolute;
  left:210px;
  top:50%;
}

#mobile_nav_bar .toggle_btn span{
  display:block;
  width: 30px;
  height: 5px;
  background: #151719;
  margin: 5px 0px;
}

@media (min-width:768px){
  #mobile_nav_bar{
    display: none;
  }
}
/*main styles*/
main {
	font-size: 14px;
	margin: 0;
	padding: 0;
  text-align: center;
  display:flex;
  flex-direction: column;
  justify-content: center;
  position: absolute;
}

main .main_page_intro{
    position: relative;
    background-color: white;
    box-shadow: 5px 5px 5px;
    border: 1px solid black;

}

/*main setting for large screens(>767px,ipad)*/
@media (min-width:768px){
  main {
    top:10%;
    left:20%;
    width: 80%;
  }

  main .main_page_intro {
    width:90%;
    margin: auto;
    display: flex;
    flex-direction: row;
    align-items: center;
  }
  main .main_page_intro img{
    width:60%;
    height: auto;
  }

  main .main_page_intro .intro_text{
    width:40%;
    background: white;
    display: flex;
    flex-direction: column;
    justify-content: center;
    text-align: left;
    padding: 5px;
  }

  main .main_page_intro .intro_content{
    font-size: 18px;
  }
}
/*top intro image section on small screen view*/

@media (max-width:767px){
  main .main_page_intro .intro_title{
    position: absolute;
    z-index: 1;
    margin: 0 auto;
    left: 0;
    right: 0;
    text-align: center;
    top: 40%;
    background: rgba(0, 0, 0, 0.8);
    font-family: Arial,sans-serif;
    color: #fff;
    width: 80%;}

    main .intro_content p{
      display: none;
    }
}

main .main_page_intro img{
  max-width: 100%;
  height:auto;
}



/*bread crumb navigation*/
.breadcrumb {
  padding-top:10px;
  padding-bottom:10px;
  padding-left:0px;
  list-style: none;
  background-color: #eee;
  margin-top: 0px;
  margin-left:5%;
  margin-bottom: 0px;
  text-align: left;
  transition: 0.5s;
}

.breadcrumb li {
  display: inline;
  font-size: 18px;
}

.breadcrumb li:last-child {
  color: #98161A;
  font-weight: bold;
}
/* ... */

